tests/fail/t13.e
cannot assign int to int arr
